[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqtgraph-gis"
version = "0.0.5"
authors = [
    { name = "Ole Meiforth", email = "olemeif@protonmail.com" },
]
description = "Tile-based GIS widget for pyqtgraph. Seamlessly overlay scientific data on real-world maps with multi-threaded rendering and WGS84 support."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["pyqtgraph", "gis", "mapping", "tiles", "wgs84", "python", "qt"]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering"
]


dependencies = [
    "requests >= 2.32.0",
    "pyqtgraph >= 0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 9.0.2",
    "pytest-qt >= 4.5.0"
]

[project.urls]
"Homepage" = "https://github.com/olemeif/pyqtgraph-gis"
"Bug Tracker" = "https://github.com/olemeif/pyqtgraph-gis/issues"
"Documentation" = "https://github.com/olemeif/pyqtgraph-gis/wiki"

[tool.setuptools]
packages = { find = { where = ["src"] } }